# AI-Study-Tool

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  DEPLOY_QUICKSTART.md  Dockerfile  IMPROVEMENTS.md  README.md  TESTING.md  VERCEL_DEPLOYMENT.md  app.py  deploy-huggingface.ps1  deploy-vercel.ps1  deploy.ps1  deploy.sh  docker-compose.yml  huggingface.yml  ingest_data.py  main.py  pyproject.toml  requirements.txt  run_tests.bat  run_tests.py
.github/workflows/: all-tests.yml  backend-tests.yml  docker-build.yml  frontend-tests.yml
.hf/: README.md
backend/: .gitignore  Dockerfile  Dockerfile_hf  Makefile  config.py  main.py  pytest.ini  requirements-deploy.txt  requirements-test.txt  requirements.txt
backend/tests/: conftest.py  test_api.py  test_config.py  test_data_loader.py  test_embedding.py  test_search.py  test_validation.py  test_vector_store.py
frontend/: .env.example  .env.local.example  .env.production  Dockerfile  Makefile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx  types.js
frontend/src/components/layout/: Layout.jsx
frontend/src/components/ui/: Alert.jsx  Badge.jsx  (+6 more)
frontend/src/hooks/: useApi.js
frontend/src/pages/: Home.jsx  Learning.jsx  Quiz.jsx  Upload.jsx  index.js
frontend/src/services/: api.js
frontend/src/store/: useAppStore.js
frontend/src/test/: index.js  mockApi.js
frontend/src/utils/: helpers.js
scripts/: dev.ps1  dev.sh
src/: data_loader.py  search.py  vector_store.py
(+8 files in other folders)
